--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
@@ -37,7 +37,7 @@ $ {orch-cli} get checluster --all-namespaces \
 ----
 $ {orch-cli} patch checluster/{context} -n {prod-namespace} \ # <1>
 --type='merge' -p \
-'{"spec":{"components":{"cheServer":{"extraProperties":{"CHE_LIMITS_USER_WORKSPACES_COUNT": "__<kept_workspaces_limit>__"}}}}}' <2>
+'{"spec":{"components":{"cheServer":{"extraProperties":{"CHE_LIMITS_USER_WORKSPACES_COUNT": "__<kept_workspaces_limit>__"}}}}}' # <2>
 ----
 <1> The {prod-short} namespace that you got in step 1.
 <2> Your choice of the `__<kept_workspaces_limit>__` value.
