fix: resolve the callout copy-paste issue

--- a/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
+++ b/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
@@ -18,7 +18,7 @@ This configuration is part of the `CheCluster` Custom Resource:
 spec:
   components:
     devWorkspace:
-      runningLimit: "__<running_workspaces_limit>__" <1>
+      runningLimit: "__<running_workspaces_limit>__" # <1>
 ----
 <1> Sets the maximum number of simultaneously running workspaces per user. The default value is `1`.
 
@@ -36,7 +36,7 @@ $ {orch-cli} get checluster --all-namespaces \
 +
 [source,subs="+quotes,attributes"]
 ----
-$ {orch-cli} patch checluster/{context} -n {prod-namespace} \ # <1>
+$ {orch-cli} patch checluster/{context} -n {prod-namespace} \# <1>
 --type='merge' -p \
 '{"spec":{"components":{"devWorkspace":{"runningLimit": "__<running_workspaces_limit>__"}}}}' # <2>
 ----
