--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
@@ -17,7 +17,7 @@ spec:
   components:
     cheServer:
       extraProperties:
-        CHE_LIMITS_USER_WORKSPACES_COUNT: "__<kept_workspaces_limit>__" <1>
+        CHE_LIMITS_USER_WORKSPACES_COUNT: "__<kept_workspaces_limit>__" # <1>
 ----
 <1> Sets the maximum number of workspaces per user. The default value, `-1`, allows users to keep an unlimited number of workspaces. Use a positive integer to set the maximum number of workspaces per user.
 
@@ -35,7 +35,7 @@ $ {orch-cli} get checluster --all-namespaces \
 +
 [source,subs="+quotes,attributes"]
 ----
-$ {orch-cli} patch checluster/{context} -n {prod-namespace} \ # <1>
+$ {orch-cli} patch checluster/{context} -n {prod-namespace} \# <1>
 --type='merge' -p \
 '{"spec":{"components":{"cheServer":{"extraProperties":{"CHE_LIMITS_USER_WORKSPACES_COUNT": "__<kept_workspaces_limit>__"}}}}}' # <2>
 ----
