chore: manually resolve cherry-pick conflicts

--- a/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
+++ b/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
@@ -17,25 +17,30 @@ This configuration is part of the `CheCluster` Custom Resource:
 spec:
   components:
     devWorkspace:
-      runningLimit: "__<running_workspaces_limit>__" <1>
+      runningLimit: "__<running_workspaces_limit>__" # <1>
 ----
 <1> Sets the maximum number of simultaneously running workspaces per user. The default value is `1`.
 
 .Procedure
 
-. Get the name of the {prod-short} namespace:
+. Get the name of the {prod-short} namespace. The default is `{prod-namespace}`.
 +
 [source,terminal,subs="+quotes,attributes"]
 ----
 $ {orch-cli} get checluster --all-namespaces \
   -o=jsonpath="{.items[*].metadata.namespace}"
 ----
-+
-include::example$snip_{project-context}-default-namespace.adoc[]
 
 . Configure the `runningLimit`:
 +
-include::example$snip_{project-context}-enabling-users-to-run-multiple-workspaces-simultaneously.adoc[]
+[source,subs="+quotes,attributes"]
+----
+$ {orch-cli} patch checluster/{context} -n {prod-namespace} \# <1>
+--type='merge' -p \
+'{"spec":{"components":{"devWorkspace":{"runningLimit": "__<running_workspaces_limit>__"}}}}' # <2>
+----
+<1> The {prod-short} namespace that you got in step 1.
+<2> Your choice of the `__<running_workspaces_limit>__` value.
 
 .Additional resources
 
