--- a/modules/administration-guide/pages/creating-a-telemetry-plugin.adoc
+++ b/modules/administration-guide/pages/creating-a-telemetry-plugin.adoc
@@ -52,7 +52,7 @@ include::example$creating-a-telemetry-plug-in/main.go[]
 ----
 ====
 
-Create a container image based on this code and expose it as a deployment in OpenShift in the {prod-namespace} {orch-namespace}. The code for the example telemetry server is available at link:https://github.com/che-incubator/telemetry-server-example[telemetry-server-example]. To deploy the telemetry server, clone the repository and build the container:
+Create a container image based on this code and expose it as a deployment in OpenShift in the `{prod-namespace}` {orch-namespace}. The code for the example telemetry server is available at link:https://github.com/che-incubator/telemetry-server-example[telemetry-server-example]. To deploy the telemetry server, clone the repository and build the container:
 
 [subs="+attributes,+quotes"]
 ----
@@ -66,7 +66,7 @@ Both `manifest_with_ingress.yaml` and `manifest_with_route` contain definitions 
 
 In the manifest file, replace the `image` and `host` fields to match the image you pushed, and the public hostname of your {platforms-name} cluster. Then run:
 
-[subs="+quotes"]
+[subs="+quotes,+attributes"]
 ----
 $ kubectl apply -f manifest_with_[ingress|route].yaml -n {prod-namespace}
 ----
@@ -335,14 +335,14 @@ include::example$creating-a-telemetry-plug-in/plugin.yaml[]
 
 Typically, the user deploys this file to a corporate web server. This guide demonstrates how to create an Apache web server on OpenShift and host the plug-in there.
 
-Create a ConfigMap referencing the new `plugin.yaml` file.
+Create a `ConfigMap` object that references the new `plugin.yaml` file.
 
 [subs="+attributes"]
 ----
 $ oc create configmap --from-file=plugin.yaml -n {prod-namespace} telemetry-plugin-yaml
 ----
 
-Create a deployment, a service, and a route to expose the web server. The deployment references this ConfigMap and places it in the `/var/www/html` directory.
+Create a deployment, a service, and a route to expose the web server. The deployment references this `ConfigMap` object and places it in the `/var/www/html` directory.
 
 .`manifest.yaml`
 ====
