--- a/modules/end-user-guide/pages/url-parameter-for-starting-ephemeral-workspaces.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-starting-ephemeral-workspaces.adoc
@@ -1,5 +1,5 @@
 :_content-type: CONCEPT
-:description: URL parameter starting ephemeral workspaces
+:description: URL parameter for starting ephemeral workspaces
 :keywords: ephemeral-workspace, persistent-workspace
 :navtitle: URL parameter starting ephemeral workspaces
 :page-aliases:
