--- a/modules/end-user-guide/pages/url-parameter-for-starting-ephemeral-workspaces.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-starting-ephemeral-workspaces.adoc
@@ -23,7 +23,7 @@ The URL for starting an ephemeral workspace:
 pass:c,a,q[{prod-url}]#__<git_repository_url>__?storageType=ephemeral
 ----
 
-If the URL for starting a new workspace doesn't contain a URL parameter specifying the storage type, {prod-short} uses the default storage type defined in the `CheCluster` Custom Resource.
+If the URL for starting a new workspace does not contain a URL parameter specifying the storage type, {prod-short} uses the default storage type defined in the `CheCluster` Custom Resource.
 
 .Additional resources
 
