--- a/modules/end-user-guide/pages/url-parameter-for-starting-ephemeral-workspaces.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-starting-ephemeral-workspaces.adoc
@@ -1,7 +1,7 @@
 :_content-type: CONCEPT
 :description: URL parameter for starting ephemeral workspaces
 :keywords: ephemeral-workspace, persistent-workspace
-:navtitle: URL parameter starting ephemeral workspaces
+:navtitle: URL parameter for starting ephemeral workspaces
 :page-aliases:
 
 [id="url-parameter-for-starting-ephemeral-workspaces_{context}"]
