fix: broken ID in ccutil

--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -19,7 +19,7 @@
 * xref:devfile-introduction.adoc[]
 * xref:selecting-a-workspace-ide.adoc[]
 ** xref:selecting-an-ide-by-using-a-url-parameter.adoc[]
-** xref:specifying-an-in-browser-ide-for-a-git-repository-by-using-che-editor.yaml.adoc[]
+** xref:specifying-an-in-browser-ide-for-a-git-repository-by-using-che-editor.adoc[]
 * xref:using-credentials-and-configurations-in-workspaces.adoc[]
 ** xref:using-git-credentials.adoc[]
 ** xref:enabling-artifact-repositories-in-a-restricted-environment.adoc[]
