--- a/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
@@ -12,7 +12,7 @@ The default in-browser IDE in a new workspace is link:https://theia-ide.org/docs
 You can select another supported in-browser IDE by either method:
 
 * When you start a new workspace by visiting a URL, you can choose an IDE for that workspace by adding the `che-editor` parameter to the URL. See xref:selecting-an-ide-by-using-a-url-parameter.adoc[].
-* You can specify an IDE in the `.che/che-editor.yaml` file of the Git repository for all new workspaces that will feature a clone of that repository. See xref:specifying-an-in-browser-ide-for-a-git-repository-by-using-che-editor.yaml.adoc[].
+* You can specify an IDE in the `.che/che-editor.yaml` file of the Git repository for all new workspaces that will feature a clone of that repository. See xref:specifying-an-in-browser-ide-for-a-git-repository-by-using-che-editor.adoc[].
 
 .Supported in-browser IDEs 
 
