--- a/modules/end-user-guide/pages/selecting-an-ide-by-using-a-url-parameter.adoc
+++ b/modules/end-user-guide/pages/selecting-an-ide-by-using-a-url-parameter.adoc
@@ -1,15 +1,16 @@
 :_content-type: PROCEDURE
-:description: Selecting an in-browser IDE for a new workspace by using a URL parameter
+:description: Selecting an in-browser IDE for one new workspace
 :keywords: select-IDE
-:navtitle: Selecting an in-browser IDE for a new workspace by using a URL parameter
+:navtitle: Selecting an in-browser IDE for one new workspace
 :page-aliases:
 
-[id="selecting-an-in-browser-ide-for-a-new-workspace-by-using-a-url-parameter_{context}"]
-= Selecting an in-browser IDE for a new workspace by using a URL parameter
+[id="selecting-an-in-browser-ide-for-one-new-workspace_{context}"]
+= Selecting an in-browser IDE for one new workspace
 
-You can select your preferred in-browser IDE when starting a new workspace. This is the easiest way and it doesn't affect your other workspaces or other users.
+You can select your preferred in-browser IDE when using a URL for starting a new workspace. This way, each developer using {prod-short} can start a workspace with a clone of the same project repository and yet with the personal choice of the in-browser IDE.
 
 .Procedure
 
 . Include the URL parameter for the workspace IDE in the URL for starting a new workspace. See xref:url-parameter-for-the-workspace-ide.adoc[].
 . Visit the URL in the browser. See xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[].
+. Verify that the selected in-browser IDE loads in the browser tab of the started workspace.
