--- a/modules/end-user-guide/pages/specifying-an-in-browser-ide-for-a-git-repository-by-using-che-editor.yaml.adoc
+++ b/modules/end-user-guide/pages/specifying-an-in-browser-ide-for-a-git-repository-by-using-che-editor.yaml.adoc
@@ -1,18 +1,13 @@
 :_content-type: PROCEDURE
-:description: Specifying an in-browser IDE for a Git repository by using `che-editor.yaml`
+:navtitle: Selecting an in-browser IDE for all workspaces that clone a Git repository
+:description: Selecting an in-browser IDE for all workspaces that clone a Git repository
 :keywords: select-IDE, che-editor, che-editor-yaml
-:navtitle: Specifying an in-browser IDE for a Git repository by using `che-editor.yaml`
-:page-aliases:
+//:page-aliases:
 
 [id="specifying-an-in-browser-ide-for-a-git-repository-by-using-the-che-editor-file_{context}"]
-= Specifying an in-browser IDE for a Git repository by using `che-editor.yaml`
+= Selecting an in-browser IDE for all workspaces that clone a Git repository
 
-include::example$proc_using-the-che-prod-editor-file-to-select-an-ide.adoc[leveloffset=+1]
+include::partial$proc_setting-up-che-editor-yaml.adoc[leveloffset=+1]
 
-include::example$con_customizing-ide-selection-with-the-che-editor-file.adoc[leveloffset=+1]
+include::partial$ref_options-for-che-editor-yaml.adoc[leveloffset=+1]
 
-include::partial$proc_using-a-custom-plug-in-registry-for-your-ide.adoc[leveloffset=+1]
-
-include::partial$proc_using-a-web-reference-for-your-ide.adoc[leveloffset=+1]
-
-include::partial$proc_using-an-embedded-editor-definition-for-your-ide.adoc[leveloffset=+1]
