procedures: rewrite the sections with  improved reader UX, corrections, and modular docs improvements

--- a/modules/end-user-guide/pages/selecting-an-in-browser-ide-for-one-new-workspace.adoc
+++ b/modules/end-user-guide/pages/selecting-an-in-browser-ide-for-one-new-workspace.adoc
@@ -2,7 +2,7 @@
 :description: Selecting an in-browser IDE for one new workspace
 :keywords: select-IDE
 :navtitle: Selecting an in-browser IDE for one new workspace
-:page-aliases:
+:page-aliases: selecting-an-ide-by-using-a-url-parameter.adoc
 
 [id="selecting-an-in-browser-ide-for-one-new-workspace_{context}"]
 = Selecting an in-browser IDE for one new workspace
@@ -13,4 +13,6 @@ You can select your preferred in-browser IDE when using a URL for starting a new
 
 . Include the URL parameter for the workspace IDE in the URL for starting a new workspace. See xref:url-parameter-for-the-workspace-ide.adoc[].
 . Visit the URL in the browser. See xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[].
-. Verify that the selected in-browser IDE loads in the browser tab of the started workspace.
+
+.Verification
+* Verify that the selected in-browser IDE loads in the browser tab of the started workspace.
