--- a/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
+++ b/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
@@ -192,7 +192,7 @@ $ {orch-cli} get -o json pod __<workspace pod name>__ -n __<workspace namespace>
 }
 ----
 
-* Inspect the `/public-certs` folder in the Che-Theia IDE container and check if its contents match the list of entries in the `ca-certs` `ConfigMap` object:
+* Inspect the `/public-certs` folder in the Che-Theia IDE container and check if its contents match the list of entries from the `custom-certs` `ConfigMap` object:
 +
 [subs="+attributes,+quotes",options="nowrap",role=white-space-pre]
 ----
