--- a/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
+++ b/modules/administration-guide/pages/deploying-che-with-support-for-git-repositories-with-self-signed-certificates.adoc
@@ -56,7 +56,7 @@ spec:
 
 * Create and start a new workspace. Every container used by the workspace mounts a special volume that contains a file with the self-signed certificate. The container's `/etc/gitconfig` file contains information about the Git server host (its URL) and the path to the certificate in the `http` section (see Git documentation about link:https://git-scm.com/docs/git-config#Documentation/git-config.txt-httpsslCAInfo[git-config]).
 +
-.Contents of a `/etc/gitconfig` file
+.Contents of an `/etc/gitconfig` file
 ====
 ----
 [http "https://10.33.177.118:3000"]
