--- a/modules/end-user-guide/pages/enabling-maven-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-maven-artifact-repositories.adoc
@@ -12,10 +12,11 @@ You can enable a Maven artifact repository in Maven workspaces that run in a res
 .Prerequisites
 
 * You are not running any Maven workspace.
+* You know your user namespace, which is `__<username>__-{prod-id-short}` where `__<username>__` is your {prod-short} username.
 
 .Procedure
 
-. Apply the Secret for the TLS certificate:
+. In the `__<username>__-{prod-id-short}` namespace, apply the Secret for the TLS certificate:
 +
 [source,yaml,subs="+quotes,+attributes,+macros"]
 ----
@@ -35,7 +36,7 @@ data:
 ----
 <1> Base64 encoding with disabled line wrapping.
 
-. Apply the ConfigMap to create the `settings.xml` file:
+. In the `__<username>__-{prod-id-short}` namespace, apply the ConfigMap to create the `settings.xml` file:
 +
 [source,yaml,subs="+quotes"]
 ----
@@ -84,13 +85,12 @@ data:
     </settings>
 ----
 
-. Optional: When using EAP-based devfiles, apply a second `settings-xml` ConfigMap with the same content, a different name, and the `/home/jboss/.m2` mount path.
+. Optional: When using EAP-based devfiles, apply a second `settings-xml` ConfigMap in the `__<username>__-{prod-id-short}` namespace, and with the same content, a different name, and the `/home/jboss/.m2` mount path.
 
-. Apply the ConfigMap for the TrustStore initialization script:
+. In the `__<username>__-{prod-id-short}` namespace, apply the ConfigMap for the TrustStore initialization script:
 
 +
-Java 8
-+
+.Java 8
 [source,yaml,subs="+quotes,+attributes,+macros"]
 ----
 kind: ConfigMap
@@ -111,8 +111,7 @@ data:
 ----
 
 +
-Java 11
-+
+.Java 11
 [source,yaml,subs="+quotes,+attributes,+macros"]
 ----
 kind: ConfigMap
