--- a/modules/end-user-guide/pages/selecting-an-in-browser-ide-for-one-new-workspace.adoc
+++ b/modules/end-user-guide/pages/selecting-an-in-browser-ide-for-one-new-workspace.adoc
@@ -7,7 +7,7 @@
 [id="selecting-an-in-browser-ide-for-one-new-workspace_{context}"]
 = Selecting an in-browser IDE for one new workspace
 
-You can select your preferred in-browser IDE when using a URL for starting a new workspace. This way, each developer using {prod-short} can start a workspace with a clone of the same project repository and yet with the personal choice of the in-browser IDE.
+You can select your preferred in-browser IDE when using a URL for starting a new workspace. This way, each developer using {prod-short} can start a workspace with a clone of the same project repository and the personal choice of the in-browser IDE.
 
 .Procedure
 
