--- a/modules/end-user-guide/partials/ref_options-for-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/ref_options-for-che-editor-yaml.adoc
@@ -1,7 +1,7 @@
 [id="options-for-che-editor-yaml_{context}"]
 = Options for che-editor.yaml
 
-The `che-editor.yaml` file supports using a `reference` to a remote IDE definition or an `inline` IDE definition as an alternative to the `id` parameter. This is useful when the IDE is not defined in the plugin registry:
+The `che-editor.yaml` file supports using a `reference` to a remote IDE definition or an `inline` IDE definition as an alternative to the `id` parameter. This is useful when the IDE is not defined in the plug-in registry:
 
 .`reference` points to a remote `che-editor.yaml` file
 ====
@@ -27,18 +27,6 @@ inline:
 
 The `che-editor.yaml` file supports optional parameters to suit the needs of more complex scenarios: `regisryUrl` and `override`:
 
-.`reference` points to a remote `che-editor.yaml` file
-====
-[source,yaml]
-----
-reference: https://gist.github.com/.../che-editor.yaml # required
-override:                                              # optional
-  containers:
-      - name: theia-ide
-        memoryLimit: 1280Mi 
-----
-====
-
 .`registryUrl` points to a custom plug-in registry rather than to the default {prod-short} plug-in registry
 ====
 [source,yaml]
@@ -52,57 +40,18 @@ override:                             # optional
 ----
 ====
 
-pass:[<!-- vale RedHat.TermsErrors = NO -->]
-
-.`inline` specifies a complete IDE definition when your project requires a customized IDE
+Can I remove the `reference` line below? And can this work also with the `registryURL`?
+.`override` does what?
 ====
 [source,yaml]
 ----
-inline:
-  endpoints:
-    - name: "theia"
-      public: true
-      targetPort: 3100
-      attributes:
-        protocol: http
-        type: ide
-        secure: true
-        cookiesAuthEnabled: true
-        discoverable: false
-    (...)
+reference: https://gist.github.com/.../che-editor.yaml # required
+override:                                              # optional
   containers:
-    - name: theia-ide
-      image: "quay.io/eclipse/che-theia:next"
-      env:
-        - name: THEIA_PLUGINS
-          value: local-dir:///plugins
-      volumeMounts:
-        - name: plugins
-          path: "/plugins"
-        - name: theia-local
-          path: "/home/theia/.theia"
-      mountSources: true
-      ports:
-        - exposedPort: 3100
-      memoryLimit: "512M"
-      cpuLimit: 1000m
-      cpuRequest: 100m
-  initContainers:
-    - name: remote-runtime-injector
-      image: "quay.io/eclipse/che-theia-endpoint-runtime-binary:next"
-      volumeMounts:
-        - name: remote-endpoint
-          path: "/remote-endpoint"
-          ephemeral: true
-      env:
-        - name: PLUGIN_REMOTE_ENDPOINT_EXECUTABLE
-          value: /remote-endpoint/plugin-remote-endpoint
-        - name: REMOTE_ENDPOINT_VOLUME_NAME
-          value: remote-endpoint
+      - name: theia-ide
+        memoryLimit: 1280Mi 
 ----
 ====
-
-pass:[<!-- vale RedHat.TermsErrors = YES -->]
 
 .Additional resources
 
