fix: in-line hyperlinks

--- a/modules/end-user-guide/pages/selecting-an-in-browser-ide-for-one-new-workspace.adoc
+++ b/modules/end-user-guide/pages/selecting-an-in-browser-ide-for-one-new-workspace.adoc
@@ -11,8 +11,8 @@ You can select your preferred in-browser IDE when using a URL for starting a new
 
 .Procedure
 
-. Include the URL parameter for the workspace IDE in the URL for starting a new workspace. See xref:url-parameter-for-the-workspace-ide.adoc[].
-. Visit the URL in the browser. See xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[].
+. Include the xref:url-parameter-for-the-workspace-ide.adoc[URL parameter for the workspace IDE] in the xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[URL for starting a new workspace].
+. Visit the URL in the browser.
 
 .Verification
 * Verify that the selected in-browser IDE loads in the browser tab of the started workspace.
