--- a/modules/end-user-guide/partials/proc_setting-up-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/proc_setting-up-che-editor-yaml.adoc
@@ -18,6 +18,6 @@ id: che-incubator/che-idea/latest
 
 .Verification
 
-. Visit the URL for starting a new workspace. See xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[].
+. Visit the xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[URL for starting a new workspace].
 . Verify that the selected in-browser IDE loads in the browser tab of the started workspace.
 
