fix: remove '# required'

--- a/modules/end-user-guide/partials/ref_options-for-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/ref_options-for-che-editor-yaml.adoc
@@ -7,7 +7,7 @@ The `che-editor.yaml` file supports using a `reference` to a remote IDE definiti
 ====
 [source,yaml]
 ----
-reference: https://gist.github.com/.../che-editor.yaml # required
+reference: https://gist.github.com/.../che-editor.yaml
 ----
 ====
 
