fix: further edits

--- a/modules/end-user-guide/partials/proc_setting-up-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/proc_setting-up-che-editor-yaml.adoc
@@ -3,18 +3,9 @@
 
 To define the same in-browser IDE for all workspaces that will clone the same remote Git repository of your project, you can use the `che-editor.yaml` file. Using this file allows you to set a common default editor for your team and to provide new contributors with a default editor that is most suitable for your project. You can also use the `che-editor.yaml` file when you need to set a different IDE default for a particular repository of your project rather than use the default IDE of your organization's {prod-short} instance.
 
-.Prerequisites
-
-* The IDE `id` from the table in xref:selecting-a-workspace-ide.adoc[].
-
 .Procedure
 
-* In the remote Git repository of your project, create a `/.che/che-editor.yaml` file that specifies the `id` of your selected IDE. For example:
-+
-[source,yaml]
-----
-id: che-incubator/che-idea/latest
-----
+* In the remote Git repository of your project, create a `/.che/che-editor.yaml` file that contains the relevant parameter, as described in the next section.
 
 .Verification
 
