fix: further edit

--- a/modules/end-user-guide/partials/proc_setting-up-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/proc_setting-up-che-editor-yaml.adoc
@@ -5,7 +5,7 @@ To define the same in-browser IDE for all workspaces that will clone the same re
 
 .Procedure
 
-* In the remote Git repository of your project, create a `/.che/che-editor.yaml` file that contains the relevant parameter, as described in the next section.
+* In the remote Git repository of your project, create a `/.che/che-editor.yaml` file with lines that specify the relevant parameter, as described in the next section.
 
 .Verification
 
