--- a/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/ref_parameters-for-che-editor-yaml.adoc
@@ -1,7 +1,7 @@
 [id="parameters-for-che-editor-yaml_{context}"]
 = Parameters for che-editor.yaml
 
-The simplest way to select an IDE in the `che-editor.yaml` is to specify the IDE's `id`, which is available in the table of supported in-browser IDEs in xref:selecting-a-workspace-ide.adoc[]:
+The simplest way to select an IDE in the `che-editor.yaml` is to specify the `id` of an IDE that is available in the table of supported in-browser IDEs in xref:selecting-a-workspace-ide.adoc[]:
 
 .`id` selects an IDE from the plug-in registry
 ====
@@ -11,7 +11,7 @@ id: che-incubator/che-code/insiders
 ----
 ====
 
-As an alternative to the `id` parameter, the `che-editor.yaml` file supports a `reference` to a remote file or an `inline` definition for an IDE outside of a plug-in registry:
+As alternatives to providing the `id` parameter, the `che-editor.yaml` file supports a `reference` to the URL of another `che-editor.yaml` file or an `inline` definition for an IDE outside of a plug-in registry:
 
 .`reference` points to a remote `che-editor.yaml` file
 ====
