--- a/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
+++ b/modules/end-user-guide/pages/selecting-a-workspace-ide.adoc
@@ -7,7 +7,7 @@
 [id="selecting-a-workspace-ide_{context}"]
 = Selecting a workspace IDE
 
-The default in-browser IDE in a new workspace is link:https://theia-ide.org/docs/[Che Theia].
+The default in-browser IDE in a new workspace is link:https://theia-ide.org/docs/[Che Theia]. In addition, link:https://github.com/che-incubator/che-code[Visual Studio Code] is available as a link:https://access.redhat.com/support/offerings/techpreview[Technology Preview] feature for non-restricted environments.
 
 You can select another supported in-browser IDE by either method:
 
