--- a/modules/end-user-guide/pages/specifying-an-in-browser-ide-for-a-git-repository-by-using-the-che-editor-yaml.adoc
+++ b/modules/end-user-guide/pages/specifying-an-in-browser-ide-for-a-git-repository-by-using-the-che-editor-yaml.adoc
@@ -2,7 +2,7 @@
 :description: Specifying an in-browser IDE for a Git repository by using `che-editor.yaml`
 :keywords: select-IDE, che-editor, che-editor-yaml
 :navtitle: Specifying an in-browser IDE for a Git repository by using `che-editor.yaml`
-:page-aliases:
+:page-aliases: specifying-an-in-browser-ide-for-a-git-repository-by-using-che-editor.yaml.adoc
 
 [id="specifying-an-in-browser-ide-for-a-git-repository-by-using-the-che-editor-file_{context}"]
 = Specifying an in-browser IDE for a Git repository by using `che-editor.yaml`
